      PCI card (LP: #284408)
  * DistUpgrade/xorg_fix_intrepid.py:
    - do not rewrite multiseat configs (LP: #292774)
  * DistUpgrade/DistUpgradeController.py: 
    - new test if the upgrade is run from a remote 
      login (LP: #301787)
  * UpdateManager/Common/MyCache.py,
    UpdateManager/Common/UpdateList.py:
    - move the cache,updatelist implementation out into  
      its own file

 --

update-manager (1:0.95.2) jaunty; urgency=low

  * debian/rules 
    - remove the arch-build target
  * DistUpgrade/DistUpgradeController.py:
    - improvements to the sources.list rewriting, better tests
    - when rewriting sources.list check for inconsistencies between what
      components are enabled in intrepid vs intrepid-updates and 
      intrepid-security and automatically enable missing ones for
      intrepid-updates and intrepid-security

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 12 Nov 2008 14:12:50 +0100

update-manager (1:0.95.1) jaunty; urgency=low

  * DistUpgrade/DistUpgrade.glade, DistUpgrade/window_main.ui:
    - show 9.04 upgrade target
  * debian/rules:
    - calculate demotions based on intrepid->jaunty
  * DistUpgrade/DistUpgradeCache.py:
    - when the dist-upgrade calculation fails, show the reason
      why in the error dialog (LP: #281286)
    - when a meta package can not be upgraded, show a proper
      error message with the package in question
  * DistUpgrade/DistUpgradeQuirks.py:
    - abort ugprade from hardy if evms is used in /proc/mounts
      evms got removed from the archive in intrepid (LP: #292179)
    - do not add "relatime" if "noatime" is already given (thanks
      to  Ken Geis)
  * DistUpgrade/removal_blacklist.cfg:
    - remove overly broad postgresql regexp
  * DistUpgrade/DistUpgradeCache.py:
    - do not limit the removal blacklist to downloadable packages,
      this limits it too much
  * check-new-release:
    - install check for new releases into update-motd.d/daily
