@@ -12,6 +12,8 @@ update-manager (1:0.95.3) jaunty; urgency=low
     UpdateManager/Common/UpdateList.py:
     - move the cache,updatelist implementation out into  
       its own file
+  * fix free space check on regular update-manager 
+    invocations (LP: #105113)
 
  --
 
